--- a/js/package.json
+++ b/js/package.json
@@ -1,5 +1,16 @@
 {
   "dependencies": {
-    "through2-map": "^4.0.0"
-  }
+    "express": "^4.21.2"
+  },
+  "name": "102",
+  "version": "1.0.0",
+  "main": "Math.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "type": "module"
 }
